--- a/index.html
+++ b/index.html
@@ -23,7 +23,29 @@
        
        
         <div id='title'>title</div>
-        <div id='calculator'>calculator</div>
+        <div id='calculator'>
+            <div>display</div>
+            <div>clear</div>
+            <div>backspace</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>7</div>
+            <div>8</div>
+            <div>9</div>
+            <div>10</div>
+            <div>.</div>
+            <div>+</div>
+            <div>-</div>
+            <div>/</div>
+            <div>*</div>
+            <div>=</div>
+
+
+        </div>
 
 
 
