--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
         <div id='title'>title</div>
         <div id='calculator'>
             <div id='display'>display</div>
-            <div id='backspace'>backspace</div>
-            <div>clear</div>
-            <div>+-</div>
-            <div>frac</div>
-            <div>/</div>
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>+</div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-            <div>-</div>
-            <div>7</div>
-            <div>8</div>
-            <div>9</div>
-            <div>*</div>
-            <div id='zero'>0</div>
-            <div>.</div>
-            <div>=</div>
+            <div id='backspace'><button>backspace</button></div>
+            <div><button>clear</button></div>
+            <div><button>+-</button></div>
+            <div><button>frac</button></div>
+            <div><button>/</button>/</div>
+            <div><button>1</button></div>
+            <div><button>2</button></div>
+            <div><button>3</button></div>
+            <div><button>+</button></div>
+            <div><button>4</button></div>
+            <div><button>5</button></div>
+            <div><button>6</button></div>
+            <div><button>-</button></div>
+            <div><button>7</button></div>
+            <div><button>8</button></div>
+            <div><button>9</button></div>
+            <div><button>*</button></div>
+            <div id='zero'><button>0</button></div>
+            <div><button>.</button></div>
+            <div><button>=</button></div>
             
             
 
