added more calculator features

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <div id='wrapper'>
         <div id='title'>title</div>
         <div id='calculator'>
-            <div id='display'><span>display</span></div>
+            <div id='display'><span></span></div>
             <div id='backspace'><button>backspace</button></div>
             <div><button id ='clear'>clear</button></div>
             <div><button id ='negative'>+-</button></div>
