--- a/index.html
+++ b/index.html
@@ -6,29 +6,30 @@
     <div id='wrapper'>
         <div id='title'>title</div>
         <div id='calculator'>
+
             <div id='display'><span></span></div>
             <div id='backspace'><button>backspace</button></div>
             <div><button id ='clear'>clear</button></div>
             <div><button id ='negative'>+-</button></div>
             <div><button id ='fraction'>frac</button></div>
-            <div><button id ='divide'>/</button></div>
+            <div><button calculation id ='divide'>/</button></div>
             <div><button data-number id ='one'>1</button></div>
             <div><button data-number id ='two'>2</button></div>
             <div><button data-number id ='three'>3</button></div>
-            <div><button id ='plus'>+</button></div>
+            <div><button calculation id ='plus'>+</button></div>
             <div><button data-number  id ='four'>4</button></div>
             <div><button data-number  id ='five'>5</button></div>
             <div><button data-number  id ='six'>6</button></div>
-            <div><button id ='minus'>-</button></div>
+            <div><button calculation id ='minus'>-</button></div>
             <div><button data-number  id ='seven'>7</button></div>
             <div><button data-number  id ='eight'>8</button></div>
             <div><button data-number  id ='nine'>9</button></div>
-            <div><button id ='multiply'>*</button></div>
+            <div><button calculation id ='multiply'>*</button></div>
             <div><button data-number  id ='zero'>0</button></div>
             <div><button data-number  id ='decimal'>.</button></div>
-            <div><button id ='equals'>=</button></div>
+            <div><button calculation id ='equals'>=</button></div>
         </div>
     </div>
 </body>
-<script src="script.js"></script>
+<script src="script1.js"></script>
 </html>
