implemented equals button.  fixed bugs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div><button calculation id ='multiply'>*</button></div>
             <div><button data-number  id ='zero'>0</button></div>
             <div><button data-number  id ='decimal'>.</button></div>
-            <div><button calculation id ='equals'>=</button></div>
+            <div><button id ='equals'>=</button></div>
         </div>
     </div>
 </body>
